--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lie": "^3.0.1",
     "lodash": "^3.10.1",
     "pouchdb": "^5.1.0",
-    "sinon": "^1.17.2",
+    "sinon": "git+https://github.com/sinonjs/sinon.git",
     "omit-deep": "^0.1.2"
   },
   "devDependencies": {
@@ -38,6 +38,7 @@
     "gulp-changed": "^1.3.0",
     "gulp-notify": "^2.2.0",
     "gulp-watch": "^4.3.5",
+    "imports-loader": "^0.6.5",
     "jsdom": "^7.2.2",
     "mocha": "^2.3.4",
     "run-sequence": "^1.1.5",
