--- a/package.json
+++ b/package.json
@@ -36,13 +36,16 @@
     "dirty-chai": "^1.2.2",
     "gulp": "^3.9.0",
     "gulp-changed": "^1.3.0",
+    "gulp-connect": "^2.3.1",
     "gulp-notify": "^2.2.0",
+    "gulp-open": "^1.0.0",
     "gulp-watch": "^4.3.5",
+    "http-rewrite-middleware": "^0.1.6",
     "imports-loader": "^0.6.5",
     "jsdom": "^7.2.2",
     "mocha": "^2.3.4",
     "run-sequence": "^1.1.5",
-    "sinon-chai": "^2.8.0",
+    "sinon-chai": "git+https://github.com/sjmulder/sinon-chai.git#pr/sinon-2.0.0-pre",
     "webpack": "^1.12.11",
     "webpack-stream": "^3.1.0",
     "xmlhttprequest": "^1.8.0"
