--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "gulp": "^3.9.0",
     "gulp-changed": "^1.3.0",
     "gulp-connect": "^2.3.1",
+    "gulp-gzip": "^1.2.0",
     "gulp-notify": "^2.2.0",
     "gulp-open": "^1.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-watch": "^4.3.5",
     "http-rewrite-middleware": "^0.1.6",
     "imports-loader": "^0.6.5",
