--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: node_js
 node_js:
-- '4.1'
+  - '4.1'
+cache:
+  directories:
+    - node_modules
 script: npm run $TEST_STEP
 env:
   matrix:
-  - TEST_STEP=build
-  - TEST_STEP=lint
-  - TEST_STEP=test
-  - USE_CLOUD=true TEST_STEP=karma
+    - TEST_STEP=build
+    - TEST_STEP=lint
+    - TEST_STEP=test
+    - USE_CLOUD=true TEST_STEP=karma
 notifications:
   email: false
