--- a/package.json
+++ b/package.json
@@ -29,44 +29,44 @@
   "author": "Michael Carter",
   "license": "MIT",
   "dependencies": {
-    "Base64": "^0.3.0",
-    "lie": "^3.0.1",
-    "lodash": "^3.10.1",
-    "omit-deep": "^0.1.2",
-    "pouchdb": "^5.1.0",
+    "Base64": "~0.3.0",
+    "lie": "~3.0.1",
+    "lodash": "~4.3.0",
+    "omit-deep": "~0.1.2",
+    "pouchdb": "~5.1.0",
     "sinon": "git+https://github.com/sinonjs/sinon.git"
   },
   "devDependencies": {
-    "babel-core": "^6.4.0",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
-    "chai": "^3.4.1",
-    "del": "^2.2.0",
-    "dirty-chai": "^1.2.2",
-    "gulp": "^3.9.0",
-    "gulp-changed": "^1.3.0",
-    "gulp-connect": "^2.3.1",
-    "gulp-notify": "^2.2.0",
-    "gulp-open": "^1.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-watch": "^4.3.5",
-    "http-rewrite-middleware": "^0.1.6",
-    "imports-loader": "^0.6.5",
-    "jsdom": "^7.2.2",
-    "karma": "^0.13.19",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-mocha": "^0.2.1",
-    "karma-sauce-launcher": "^0.3.0",
-    "karma-sourcemap-loader": "^0.3.7",
+    "babel-core": "~6.4.0",
+    "babel-loader": "~6.2.1",
+    "babel-preset-es2015": "~6.3.13",
+    "chai": "~3.4.1",
+    "del": "~2.2.0",
+    "dirty-chai": "~1.2.2",
+    "gulp": "~3.9.0",
+    "gulp-changed": "~1.3.0",
+    "gulp-connect": "~2.3.1",
+    "gulp-notify": "~2.2.0",
+    "gulp-open": "~1.0.0",
+    "gulp-rename": "~1.2.2",
+    "gulp-watch": "~4.3.5",
+    "http-rewrite-middleware": "~0.1.6",
+    "imports-loader": "~0.6.5",
+    "jsdom": "~8.0.2",
+    "karma": "~0.13.19",
+    "karma-chrome-launcher": "~0.2.2",
+    "karma-mocha": "~0.2.1",
+    "karma-sauce-launcher": "~0.3.0",
+    "karma-sourcemap-loader": "~0.3.7",
     "karma-spec-reporter": "0.0.24",
-    "karma-webpack": "^1.7.0",
-    "make-up": "^7.1.0",
-    "mocha": "^2.3.4",
-    "npm-run-all": "^1.5.1",
-    "run-sequence": "^1.1.5",
+    "karma-webpack": "~1.7.0",
+    "make-up": "~7.1.0",
+    "mocha": "~2.3.4",
+    "npm-run-all": "~1.5.1",
+    "run-sequence": "~1.1.5",
     "sinon-chai": "git+https://github.com/sjmulder/sinon-chai.git#pr/sinon-2.0.0-pre",
-    "webpack": "^1.12.11",
-    "webpack-stream": "^3.1.0",
-    "xmlhttprequest": "^1.8.0"
+    "webpack": "~1.12.11",
+    "webpack-stream": "~3.1.0",
+    "xmlhttprequest": "~1.8.0"
   }
 }
