swap to fork of omit-deep
the source package will not omit keys from an object that’s inside an
array which is inside an object, which of course we end up doing

https://github.com/jonschlinkert/omit-deep/pull/1

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "Base64": "~0.3.0",
     "lie": "~3.0.1",
     "lodash": "~4.3.0",
-    "omit-deep": "~0.1.2",
+    "omit-deep": "splodingsocks/omit-deep",
     "pouchdb": "~5.1.0",
     "sinon": "git+https://github.com/sinonjs/sinon.git"
   },
