--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "chai": "~3.4.1",
     "del": "~2.2.0",
     "dirty-chai": "~1.2.2",
+    "fast-levenshtein": "^1.1.3",
     "gulp": "~3.9.0",
     "gulp-changed": "~1.3.0",
     "gulp-connect": "~2.3.1",
