--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lodash": "~4.3.0",
     "omit-deep": "splodingsocks/omit-deep",
     "pouchdb": "~5.1.0",
-    "sinon": "git+https://github.com/sinonjs/sinon.git"
+    "sinon": "git+https://github.com/sinonjs/sinon.git#v2.0.0-pre"
   },
   "devDependencies": {
     "babel-core": "~6.4.0",
