--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "standard --fix",
     "test": "npm-run-all test:mocha test:karma",
     "start": "gulp start",
-    "test:mocha": "mocha test/unit --recursive",
+    "test:mocha": "mocha test/unit --recursive --exit",
     "test:karma": "karma start"
   },
   "keywords": [
@@ -34,18 +34,18 @@
     "lodash": "^4.17.4",
     "omit-deep": "splodingsocks/omit-deep",
     "pouchdb": "^6.3.4",
-    "sinon": "^3.3.0"
+    "sinon": "^4.0.2"
   },
   "devDependencies": {
-    "babel-core": "~6.4.0",
+    "babel-core": "^6.26.0",
     "babel-loader": "~6.2.1",
-    "babel-preset-es2015": "~6.3.13",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.2",
     "del": "^3.0.0",
     "dirty-chai": "^2.0.1",
     "fast-levenshtein": "^2.0.6",
     "gulp": "~3.9.0",
-    "gulp-changed": "^3.1.0",
+    "gulp-changed": "^3.1.1",
     "gulp-connect": "^5.0.0",
     "gulp-notify": "^3.0.0",
     "gulp-open": "^2.0.0",
@@ -53,7 +53,7 @@
     "gulp-watch": "~4.3.5",
     "http-rewrite-middleware": "~0.1.6",
     "imports-loader": "~0.6.5",
-    "jsdom": "^11.2.0",
+    "jsdom": "^11.3.0",
     "karma": "~0.13.19",
     "karma-chrome-launcher": "~0.2.2",
     "karma-mocha": "~0.2.1",
@@ -61,10 +61,10 @@
     "karma-sourcemap-loader": "~0.3.7",
     "karma-spec-reporter": "0.0.24",
     "karma-webpack": "~1.7.0",
-    "mocha": "^3.5.3",
+    "mocha": "^4.0.1",
     "npm-run-all": "^4.1.1",
     "run-sequence": "^2.1.0",
-    "sinon-chai": "^2.13.0",
+    "sinon-chai": "^2.14.0",
     "standard": "^10.0.3",
     "webpack": "~1.12.11",
     "webpack-stream": "~3.1.0",
