--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
     "dirty-chai": "^2.0.1",
     "fast-levenshtein": "^2.0.6",
     "gulp": "~3.9.0",
-    "gulp-changed": "^3.1.0",
-    "gulp-connect": "^5.0.0",
-    "gulp-notify": "^3.0.0",
-    "gulp-open": "^2.0.0",
+    "gulp-changed": "^3.2.0",
+    "gulp-connect": "^5.2.0",
+    "gulp-notify": "^3.2.0",
+    "gulp-open": "^2.1.0",
     "gulp-rename": "~1.2.2",
-    "gulp-watch": "~4.3.5",
+    "gulp-watch": "^5.0.0",
     "http-rewrite-middleware": "~0.1.6",
     "imports-loader": "~0.6.5",
     "jsdom": "^11.2.0",
