--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "sinon": "^3.3.0"
   },
   "devDependencies": {
-    "babel-core": "~6.4.0",
-    "babel-loader": "~6.2.1",
-    "babel-preset-es2015": "~6.3.13",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.2",
     "del": "^3.0.0",
     "dirty-chai": "^2.0.1",
