--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
   matrix:
     - TEST_STEP=build
     - TEST_STEP=lint
-    - TEST_STEP=test:mocha
-    - USE_CLOUD=true TEST_STEP=test:karma
+    - #TEST_STEP=test:mocha
+    - #USE_CLOUD=true TEST_STEP=test:karma
 notifications:
   email: false
