--- a/package.json
+++ b/package.json
@@ -33,23 +33,23 @@
     "lie": "^3.2.0",
     "lodash": "^4.17.4",
     "omit-deep": "splodingsocks/omit-deep",
-    "pouchdb": "^6.4.2",
+    "pouchdb": "^7.3.0",
     "sinon": "^4.2.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.1",
+    "@babel/core": "^7.18.2",
+    "babel-loader": "^8.2.5",
+    "@babel/preset-env": "^7.18.2",
     "chai": "^4.1.2",
-    "del": "^3.0.0",
+    "del": "^6.1.1",
     "dirty-chai": "^2.0.1",
     "fast-levenshtein": "^2.0.6",
-    "gulp": "~3.9.0",
-    "gulp-changed": "^3.2.0",
-    "gulp-connect": "^5.2.0",
-    "gulp-notify": "^3.2.0",
-    "gulp-open": "^2.1.0",
-    "gulp-rename": "~1.2.2",
+    "gulp": "^4.0.2",
+    "gulp-changed": "^4.0.3",
+    "gulp-connect": "^5.7.0",
+    "gulp-notify": "^4.0.0",
+    "gulp-open": "^3.0.1",
+    "gulp-rename": "^2.0.0",
     "gulp-watch": "^5.0.0",
     "http-rewrite-middleware": "~0.1.6",
     "imports-loader": "~0.6.5",
@@ -63,11 +63,10 @@
     "karma-webpack": "~1.7.0",
     "mocha": "^5.0.0",
     "npm-run-all": "^4.1.2",
-    "run-sequence": "^2.2.1",
     "sinon-chai": "^2.14.0",
     "standard": "^10.0.3",
-    "webpack": "~1.12.11",
-    "webpack-stream": "~3.1.0",
+    "webpack": "~5.72.1",
+    "webpack-stream": "~7.0.0",
     "xmlhttprequest": "~1.8.0"
   },
   "standard": {
